--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,4 +3,5 @@ Options -Multiviews
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_URI} !^/public/
 RewriteRule ^(.*)$ index.php?url=$1 [L]
